[package]
name = "bitborn-node"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "BitBorn prototype node (minimal)"
repository = "https://github.com/YOUR_ORG/bitborn"
homepage = "https://bitborn.org"

[dependencies]
sha3 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
